[package]
name = "kvs"
authors = ["triplewy@gmail.com"]
version = "0.1.0"
edition = "2021"
description = "A simple in-memory KV store"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
